# fswatch

./: .gitignore  CMakeLists.txt  README.osx  config.h.cmakein  configure.ac
libfswatch/: CMakeLists.txt  configure.ac  libfswatch_config.h.cmakein
libfswatch/src/libfswatch/: Makefile.am  libfswatch.sln  libfswatch.vcxproj  libfswatch.vcxproj.filters
libfswatch/src/libfswatch/c/: libfswatch.cpp  libfswatch.h  libfswatch_log.cpp  libfswatch_log.h
libfswatch/src/libfswatch/c++/: common.hpp  event.cpp  event.hpp  inotify_monitor.cpp  libfswatch_exception.cpp  monitor.cpp  monitor.hpp  path_utils.cpp  path_utils.hpp  poll_monitor.cpp  windows_monitor.cpp  windows_monitor.hpp
libfswatch/src/libfswatch/c++/windows/: win_directory_change_event.cpp  win_error_message.cpp  win_handle.cpp  win_paths.cpp  win_strings.cpp
libfswatch/src/libfswatch/c/windows/: realpath.c  realpath.h
m4/: ax_cxx_compile_stdcxx_11.m4  ax_cxx_compile_stdcxx_14.m4
src/: CMakeLists.txt  Makefile.am  fswatch.cpp
